<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/forward_rule_config_page" android:key="@string/config_title">
     <com.marco.smsrouter.preference.SmsFlowControlTogglePreference
      android:key="@string/config_forward_rule_key"
      android:dialogIcon="@drawable/ic_launcher"
      android:dialogTitle="@string/config_forward_rule_title"
      android:title="@string/config_forward_rule_title"
      android:summary="@string/config_forward_rule_off_summary"
      android:widgetLayout="@layout/toggle_preference"
      android:negativeButtonText="@null" />
     <com.marco.smsrouter.preference.BaseTextDisplayPreference
      android:key="@string/forward_rule_blacklist_key"
      android:title="@string/config_app_key"
      android:summary="@string/forward_rule_blacklist_summary"
      android:widgetLayout="@layout/toggle_preference"
      android:negativeButtonText="@null" />
     <com.marco.smsrouter.preference.BaseTextDisplayPreference
      android:key="@string/forward_rule_whitelist_key"
      android:title="@string/config_app_key"
      android:summary="@string/forward_rule_whitelist_summary"
      android:widgetLayout="@layout/toggle_preference"
      android:negativeButtonText="@null" />
    </PreferenceCategory>
</PreferenceScreen>
